--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.rolex</groupId>
-    <artifactId>eshop</artifactId>
+    <artifactId>griffons-eye</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>eshop-cache</module>
-        <module>eshop-stock</module>
+        <module>ent-cache</module>
+        <module>ent-info</module>
+        <module>nginx-mock</module>
     </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
+        <spring-boot.version>2.4.2</spring-boot.version>
     </properties>
 
     <dependencyManagement>
