add curator lock

--- a/ent-cache/src/main/resources/application.yml
+++ b/ent-cache/src/main/resources/application.yml
@@ -30,3 +30,7 @@ spring:
     listener:
       ack-mode: manual
     topic: ent_rebuild_cache
+  zookeeper:
+    url: 127.0.0.1:2181
+    timeout: 1000
+    retry: 3
