--- a/ent-info/pom.xml
+++ b/ent-info/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>eshop-entInfo</artifactId>
+    <artifactId>ent-info</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
