--- a/ent-info/src/main/resources/application-dev.yml
+++ b/ent-info/src/main/resources/application-dev.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8003
 spring:
   dataSource:
     url: jdbc:mysql://localhost:3306/ent?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true
