--- a/ent-cache/src/main/resources/application.yml
+++ b/ent-cache/src/main/resources/application.yml
@@ -34,3 +34,13 @@ spring:
     url: 192.168.67.201:2181,192.168.67.202:2181,192.168.67.203:2181
     timeout: 1000
     retry: 3
+  cache:
+    cache-name: ent-cache
+    type: ehcache
+    ehcache:
+      config: classpath:ehcache.xml
+management:
+  endpoints:
+    web:
+      exposure:
+        include: *
